nali-go: fix unknown version error (#3545)

--- a/archlinuxcn/nali-go/PKGBUILD
+++ b/archlinuxcn/nali-go/PKGBUILD
@@ -21,7 +21,7 @@ build() {
         -buildmode=pie \
         -mod=readonly \
         -modcacherw \
-        -ldflags "-compressdwarf=false -linkmode external -X \"github.com/zu1k/nali/constant.Version=$pkgver\" -extldflags $LDFLAGS" \
+        -ldflags "-compressdwarf=false -linkmode external -X \"github.com/zu1k/nali/internal/constant.Version=$pkgver\" -extldflags $LDFLAGS" \
         -o $pkgname .
 }
 
