--- a/archlinuxcn/yacd-meta/PKGBUILD
+++ b/archlinuxcn/yacd-meta/PKGBUILD
@@ -8,8 +8,8 @@ pkgdesc="Yet Another Clash Dashboard"
 arch=('any')
 url="https://github.com/MetaCubeX/Yacd-meta"
 license=('unknown')
-depends=('clash-meta')
 makedepends=('yarn')
+optdepends=('clash-meta')
 conflicts=('yacd-meta-git')
 source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/v${pkgver}.tar.gz")
 sha256sums=('098ed76836c41778ecb9707bf9a5c77f77eaa1d6c63300d5edeac34339cb5f87')
