alarmcn/plasma-mobile: fix depends

--- a/alarmcn/plasma-mobile/PKGBUILD
+++ b/alarmcn/plasma-mobile/PKGBUILD
@@ -16,7 +16,7 @@ depends=(
 	plasma-wayland-session
 	qqc2-breeze-style
 	qt5-feedback
-	kirigami-addons
+	kirigami-addons5
 	maliit-keyboard
 	kpipewire
 )
