waybar-git: add replaces for waybar-hyprland-git

--- a/archlinuxcn/waybar-git/PKGBUILD
+++ b/archlinuxcn/waybar-git/PKGBUILD
@@ -50,6 +50,7 @@ optdepends=(
 	'otf-font-awesome: Icons in the default configuration'
 )
 
+replaces=("waybar-hyprland-git")
 source=("git+${url}.git")
 sha256sums=('SKIP')
 
