clash-verge: change upstream

--- a/archlinuxcn/clash-verge/lilac.yaml
+++ b/archlinuxcn/clash-verge/lilac.yaml
@@ -18,7 +18,7 @@ repo_depends:
 
 update_on:
   - source: github
-    github: zzzgydi/clash-verge
+    github: MetaCubeX/clash-verge
     use_latest_release: true
     prefix: v
   - source: aur
