python-aiohttp-session: update link format

--- a/archlinuxcn/python-aiohttp-session/PKGBUILD
+++ b/archlinuxcn/python-aiohttp-session/PKGBUILD
@@ -16,7 +16,7 @@ optdepends=(
 )
 makedepends=('python-build' 'python-installer' 'python-setuptools' 'python-wheel')
 
-_pypi=aiohttp-session
+_pypi=aiohttp_session
 source=(
   "https://files.pythonhosted.org/packages/source/${_pypi::1}/$_pypi/$_pypi-$pkgver.tar.gz"
 )
