--- a/archlinuxcn/libspelling-apostrophe/lilac.yaml
+++ b/archlinuxcn/libspelling-apostrophe/lilac.yaml
@@ -8,8 +8,9 @@ post_build_script: git_pkgbuild_commit()
 repo_depends:
   - gtksourceview5-apostrophe
 
-update_on:
-  - source: alpm
-    repo: extra
-    alpm: libspelling
-    strip_release: true
+managed: false 
+#update_on:
+#  - source: alpm
+#    repo: extra
+#    alpm: libspelling
+#    strip_release: true
