--- a/archlinuxcn/64gram-desktop/lilac.yaml
+++ b/archlinuxcn/64gram-desktop/lilac.yaml
@@ -1,6 +1,5 @@
-pre_build_script: aur_pre_build(maintainers=['alesar1'])
-
-post_build: aur_post_build
+pre_build_script: update_pkgver_and_pkgrel(_G.newver)
+post_build_script: git_pkgbuild_commit()
 
 update_on:
   - source: github
@@ -26,8 +25,6 @@ update_on:
   - source: alpm
     alpm: abseil-cpp
     strip_release: true
-  - source: manual
-    manual: 1.0.3
 
 maintainers:
   - github: merrkry
