merrkry: update maintainer emails

--- a/archlinuxcn/looking-glass-rc/lilac.yaml
+++ b/archlinuxcn/looking-glass-rc/lilac.yaml
@@ -1,6 +1,6 @@
 maintainers:
   - github: merrkry
-    email: merrkry@tsubasa.moe
+    email: merrkry@archlinuxcn.org
 
 pre_build_script: update_pkgver_and_pkgrel(_G.newver)
 post_build_script: |
