--- a/archlinuxcn/supergfxctl/lilac.yaml
+++ b/archlinuxcn/supergfxctl/lilac.yaml
@@ -1,6 +1,6 @@
 maintainers:
   - github: merrkry
-    email: merrkry@tsubasa.moe
+    email: merrkry@archlinuxcn.org
 
 pre_build_script: aur_pre_build(maintainers=['ModYokosuka'])
 post_build: aur_post_build
