--- a/archlinuxcn/tsukimi-git/lilac.yaml
+++ b/archlinuxcn/tsukimi-git/lilac.yaml
@@ -1,6 +1,6 @@
 maintainers:
   - github: merrkry
-    email: merrkry@tsubasa.moe
+    email: merrkry@archlinuxcn.org
 
 pre_build_script: aur_pre_build(maintainers=['Eikano'])
 post_build: git_pkgbuild_commit
