--- a/archlinuxcn/zdns-git/PKGBUILD
+++ b/archlinuxcn/zdns-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=zdns-git
 pkgdesc='A command-line utility that provides high-speed DNS lookups.'
-pkgver=1.1.0.516.54965c2
+pkgver=1.1.0.569.937e22c
 pkgrel=1
 url='https://github.com/zmap/zdns'
 arch=('x86_64')
@@ -28,11 +28,11 @@ build() {
   export CGO_CFLAGS="${CFLAGS}"
   export CGO_CXXFLAGS="${CXXFLAGS}"
   export GOFLAGS="-buildmode=pie -trimpath -ldflags=-linkmode=external -mod=readonly -modcacherw"
-  go build .
+  go build -o zdns
 
-  for i in zsh bash fish; do
-    ./zdns completion $i >zdns.$i
-  done
+  #for i in zsh bash fish; do
+  #  ./zdns completion $i >zdns.$i
+  #done
 }
 
 package() {
@@ -42,7 +42,7 @@ package() {
 
   install -Dm 644 LICENSE "${pkgdir}/usr/share/licenses/zdns/LICENSE"
 
-  install -Dm 644 zdns.zsh "${pkgdir}/usr/share/zsh/site-functions/_zdns"
-  install -Dm 644 zdns.bash "${pkgdir}/usr/share/bash-completion/completions/zdns"
-  install -Dm 644 zdns.fish "${pkgdir}/usr/share/fish/vendor_completions.d/zdns.fish"
+  #install -Dm 644 zdns.zsh "${pkgdir}/usr/share/zsh/site-functions/_zdns"
+  #install -Dm 644 zdns.bash "${pkgdir}/usr/share/bash-completion/completions/zdns"
+  #install -Dm 644 zdns.fish "${pkgdir}/usr/share/fish/vendor_completions.d/zdns.fish"
 }
