apostrophe: replace dep with libspelling

--- a/archlinuxcn/apostrophe/PKGBUILD
+++ b/archlinuxcn/apostrophe/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Heddxh <g311571057 at gmail dot com>
 pkgname=apostrophe
-pkgver=3.1
-pkgrel=2
+pkgver=3.2
+pkgrel=1
 _reveal_ver=5.1.0
 pkgdesc="A distraction free Markdown editor"
 arch=(x86_64)
@@ -21,7 +21,8 @@ depends=(
     python-chardet
     libadwaita
     webkitgtk-6.0
-    libspelling-apostrophe
+    #libspelling-apostrophe
+    libspelling
     gtksourceview5-apostrophe
     dconf
     pango
@@ -43,7 +44,7 @@ source=(
     "git+https://gitlab.gnome.org/World/$pkgname.git#tag=v$pkgver"
     "https://github.com/hakimel/reveal.js/archive/${_reveal_ver}/reveal.js-${_reveal_ver}.tar.gz"
 )
-sha256sums=('02a5d8832ab3d426dfb6f87f32d5f99ddfdd8ac5c428ff747c51e056b58e5dc8'
+sha256sums=('881b24dcd4b7e2f9670de17d0829a53f5f0edac7b438da07d4eca50f89cb951d'
             'ddc83539ec50583eac9a972e88f892971b37c44e70dd0c08be069e2688684b71')
 
 prepare() {
