moonlight-qt-git: rebuild

--- a/archlinuxcn/moonlight-qt-git/lilac.yaml
+++ b/archlinuxcn/moonlight-qt-git/lilac.yaml
@@ -20,5 +20,8 @@ update_on:
   - source: alpm
     alpm: libva
     provided: libva.so
+  - source: manual
+    manual: 1
+
 maintainers:
   - github: roaldclark
