--- a/alarmcn/micromamba/PKGBUILD
+++ b/alarmcn/micromamba/PKGBUILD
@@ -6,15 +6,14 @@ pkgdesc="C++ tiny version of mamba, the fast conda package installer"
 arch=('aarch64' 'armv7h' 'i686' 'x86_64')
 url="https://github.com/mamba-org/mamba"
 license=('MIT')
-depends=('libarchive.so' 'libcurl.so' 'libsolv' 'libfmt.so'
-         'libspdlog.so' 'libyaml-cpp.so' 'libreproc.so' 'libreproc++.so'
-         'python')
+depends=('libarchive.so' 'libcurl.so' 'libsolv' 'libfmt.so' 'libsimdjson.so'
+         'libspdlog.so' 'libyaml-cpp.so' 'libreproc.so' 'libreproc++.so')
 makedepends=('gtest' 'termcolor' 'cmake' 'cli11' 'nlohmann-json'
-             'ghc-filesystem' 'tl-expected')
+             'ghc-filesystem' 'tl-expected' 'python')
 source=(micromamba-${pkgver}.tar.gz::https://github.com/mamba-org/mamba/archive/refs/tags/micromamba-${pkgver}.tar.gz)
 sha256sums=('38ee4658f66c5e4bf2c33cd3c9c0ebd01fe2e3a6da6ac619cc4702a9072dcc3c')
 provides=('micromamba')
-conflict=('micromamba' 'micromamba-bin')
+conflicts=('micromamba' 'micromamba-bin')
 
 build() {
   cd mamba-micromamba-${pkgver}
@@ -26,7 +25,7 @@ build() {
         -DBUILD_LIBMAMBAPY=OFF \
         -DBUILD_LIBMAMBA_TESTS=OFF \
         -DBUILD_MAMBA_PACKAGE=OFF \
-        -DBUILD_MICROMAMBA=ON \
+        -DBUILD_MAMBA=ON \
         -DBUILD_SHARED=ON \
         -DBUILD_STATIC=OFF \
         -B build
@@ -41,4 +40,6 @@ check() {
 package() {
   cd mamba-micromamba-${pkgver}
   DESTDIR="${pkgdir}" cmake --install build
+
+  mv "${pkgdir}"/usr/bin/{mamba,micromamba}
 }
