--- a/archlinuxcn/telegram-desktop-lily/lilac.yaml
+++ b/archlinuxcn/telegram-desktop-lily/lilac.yaml
@@ -14,6 +14,7 @@ update_on:
     to_pattern: \1
     alpm: qt6-base
     repo: extra
+    strip_release: true
   - alias: protobuf
   - source: alpm
     alpm: abseil-cpp
