--- a/archlinuxcn/bcachefs-tools-git/PKGBUILD
+++ b/archlinuxcn/bcachefs-tools-git/PKGBUILD
@@ -7,7 +7,7 @@ pkgrel=1
 epoch=1
 pkgdesc="BCacheFS filesystem utilities"
 url="https://bcachefs.org/"
-arch=("x86_64")
+arch=('x86_64' 'aarch64')
 license=("GPL-2.0-only")
 conflicts=("${_pkgname}")
 provides=("${_pkgname}")
