flyctl: add new arch

--- a/archlinuxcn/flyctl/PKGBUILD
+++ b/archlinuxcn/flyctl/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=flyctl
 pkgver=0.3.14
 pkgrel=1
 pkgdesc="Command line tools for fly.io services"
-arch=("x86_64")
+arch=('x86_64' 'aarch64' 'riscv64')
 url="https://github.com/superfly/${pkgname}"
 license=("Apache-2.0")
 makedepends=('go')
