--- a/archlinuxcn/patool/lilac.yaml
+++ b/archlinuxcn/patool/lilac.yaml
@@ -8,8 +8,7 @@ post_build_script: git_pkgbuild_commit()
 update_on:
   - source: github
     github: wummel/patool
-    use_latest_tag: true
-    prefix: upstream/
+    use_latest_release: true
 
   - source: alpm
     alpm: python
