--- a/archlinuxcn/linux-apfs-rw-dkms-git/PKGBUILD
+++ b/archlinuxcn/linux-apfs-rw-dkms-git/PKGBUILD
@@ -19,15 +19,8 @@ depends=('dkms')
 makedepends=('git')
 provides=("${_pkgname}")
 conflicts=("${_pkgname}")
-source=("git+${url}.git"
-	"version.patch")
-sha256sums=('SKIP'
-            '8a2814889a0a8a016d45cc2d7c032aec4a9f6eaa0a8551166c0124ce35bf766c')
-
-prepare() {
-	cd "${_pkgname}/"
-	patch -p1 <"${srcdir}/version.patch"
-}
+source=("git+${url}.git")
+sha256sums=('SKIP')
 
 pkgver() {
 	cd "${_pkgname}/"
@@ -35,9 +28,7 @@ pkgver() {
 }
 
 package() {
-	cd "${_pkgname}/"
-	dkms_version=$(grep PACKAGE_VERSION dkms.conf | sed -r 's#PACKAGE_VERSION="([0-9.]+)"#\1#')
-	dkms_dir="${pkgdir}/usr/src/linux-apfs-rw-${dkms_version}/"
+	local dkms_dir="${pkgdir}/usr/src/${_pkgname}-${pkgver}/"
 	install -d "${dkms_dir}"
-	cp -dr --no-preserve=ownership * "${dkms_dir}"
+	cp -r ${_pkgname}/* "${dkms_dir}"
 }
