--- a/alarmcn/linux-apfs-rw-dkms/PKGBUILD
+++ b/alarmcn/linux-apfs-rw-dkms/PKGBUILD
@@ -18,20 +18,11 @@ license=('GPL-2.0-only')
 depends=('dkms')
 provides=("${_pkgname}")
 conflicts=("${_pkgname}")
-source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/refs/tags/v${pkgver}.tar.gz"
-	"version.patch")
-sha256sums=('0c7456a21ae2e4065e326dc8703231228c29e84babfbe248b166c5169f0b087f'
-            '8a2814889a0a8a016d45cc2d7c032aec4a9f6eaa0a8551166c0124ce35bf766c')
-
-prepare() {
-	cd "${_pkgname}-${pkgver}/"
-	patch -p1 <"${srcdir}/version.patch"
-}
+source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/refs/tags/v${pkgver}.tar.gz")
+sha256sums=('5f88581878283c9f1508d1723023be666c4836b291235122414b632574023917')
 
 package() {
-	cd "${_pkgname}-${pkgver}/"
-	dkms_version=$(grep PACKAGE_VERSION dkms.conf | sed -r 's#PACKAGE_VERSION="([0-9.]+)"#\1#')
-	dkms_dir="${pkgdir}/usr/src/linux-apfs-rw-${dkms_version}/"
+	local dkms_dir="${pkgdir}/usr/src/${_pkgname}-${pkgver}/"
 	install -d "${dkms_dir}"
-	cp -dr --no-preserve=ownership * "${dkms_dir}"
+	cp -r ${_pkgname}-${pkgver}/* "${dkms_dir}"
 }
