--- a/archlinuxcn/derper-ipcert/lilac.yaml
+++ b/archlinuxcn/derper-ipcert/lilac.yaml
@@ -9,6 +9,8 @@ update_on:
     github: tailscale/tailscale
     use_latest_release: true
     prefix: v
+  - source: manual
+    manual: 1
 
 maintainers:
   - github: roaldclark
