--- a/archlinuxcn/derper-ipcert/derper.service
+++ b/archlinuxcn/derper-ipcert/derper.service
@@ -9,8 +9,9 @@ DynamicUser=yes
 StateDirectory=derper
 WorkingDirectory=/var/lib/derper
 EnvironmentFile=-/etc/conf.d/derper
+ExecStartPre=/usr/bin/sh /etc/derper/openssl-cert-gen.sh
 ExecStart=/usr/bin/derper $DERPER_ARGS
-ExecReload=/bin/kill -HUP $MAINPID
+ExecReload=/usr/bin/kill -HUP $MAINPID
 LimitNOFILE=65535
 NoNewPrivileges=true
 ProtectHome=true
