derper-ipcert: improve service config and install prompts
* Add CAP_NET_BIND_SERVICE to the .service file to allow binding to
  privileged ports
* Organize and categorized the content of the .service file for better
  readability
* Add a .install file for better installation management

Signed-off-by: Roald Clark <roaldclark@gmail.com>

--- a/archlinuxcn/derper-ipcert/PKGBUILD
+++ b/archlinuxcn/derper-ipcert/PKGBUILD
@@ -22,6 +22,7 @@ backup=(
     'etc/derper/openssl.cnf'
 )
 options=(!lto)
+install=derper-ipcert.install
 source=("${pkgname}-v${pkgver}.tar.gz::${url}/archive/v${pkgver}.tar.gz"
         "derper.conf"
         "derper.service"
@@ -29,8 +30,8 @@ source=("${pkgname}-v${pkgver}.tar.gz::${url}/archive/v${pkgver}.tar.gz"
         "openssl.cnf"
         "0001-allow-usage-of-ip-certificates-by-bypassing-hostname.patch")
 sha256sums=('ef7b8a76ce81133dc10f243d733302c070232cdd6594b685c6adbf32769d4f2c'
-            '28f550b84a1873983763f8914d81fb057199d61e6d2781a7232dfb7aae717cda'
-            '91a5c52b8aab064d851dde58770c6f0baccd31ea5f5ccca28d1fdaa5f3398640'
+            '8593d6c048f4174206cbac5d82810903eab8f0afef36c50be66a2c6018c9f988'
+            'cda0c4e9b6e3be7ca4950ae43bd29588447eba7233e52ea067eb0215ee8eed18'
             '5c78d28f278240423acf6e7937568034646894bed69908815f213caf4dd95a3d'
             'fd981cea16dae0b6f3008a7009a2faabe1911706d06856d504a2e046fae63cc9'
             '66407bec41131197d2b0133dafe0e04b814b6c458052509515a1284a42046719')
