--- a/archlinuxcn/derper-ipcert/derper.conf
+++ b/archlinuxcn/derper-ipcert/derper.conf
@@ -6,4 +6,4 @@
 # - https://tailscale.com/kb/1232/derp-servers
 
 
-DERPER_ARGS="-a=:10443 -c /var/lib/derper/derper.key -certdir=/etc/derper/certs -certmode=manual -hostname=127.0.0.1 -http-port=5100 -stun=true -verify-clients=false"
+DERPER_ARGS="-a=:10443 -c=/var/lib/derper/derper.key -certdir=/etc/derper/certs -certmode=manual -hostname=127.0.0.1 -http-port=5100 -stun=true -verify-clients=false"
