--- a/archlinuxcn/derper-ipcert/derper.service
+++ b/archlinuxcn/derper-ipcert/derper.service
@@ -1,31 +1,47 @@
 [Unit]
-Description=Derper service
+Description=derper service
+Documentation=https://github.com/tailscale/tailscale/tree/main/cmd/derper
 Requires=network-online.target
 After=network-online.target
 
 [Service]
+# Basic Configuration
+ExecStartPre=/usr/bin/sh /etc/derper/openssl-cert-gen.sh
+ExecStart=/usr/bin/derper $DERPER_ARGS
+ExecReload=/usr/bin/kill -HUP $MAINPID
 Restart=on-failure
+
+# User and Directory Configuration
 DynamicUser=yes
 StateDirectory=derper
 WorkingDirectory=/var/lib/derper
 EnvironmentFile=-/etc/conf.d/derper
-ExecStartPre=/usr/bin/sh /etc/derper/openssl-cert-gen.sh
-ExecStart=/usr/bin/derper $DERPER_ARGS
-ExecReload=/usr/bin/kill -HUP $MAINPID
+
+# File Permission and Path Protections
+ReadOnlyPaths=/etc/derper
+ReadOnlyPaths=-/etc/conf.d/derper
+ReadWritePaths=/var/lib/derper
+
+# File Descriptor Limit
 LimitNOFILE=65535
+
+# Security Settings
 NoNewPrivileges=true
-ProtectHome=true
-ProtectSystem=full
-ProtectHostname=true
-ProtectControlGroups=true
-ProtectKernelModules=true
-ProtectKernelTunables=true
 LockPersonality=true
-RestrictRealtime=yes
-RestrictNamespaces=yes
+ProtectSystem=full
+ProtectHome=true
+ProtectControlGroups=true
+ProtectKernelTunables=true
+ProtectKernelModules=true
+ProtectHostname=true
 MemoryDenyWriteExecute=yes
+RestrictNamespaces=yes
+RestrictRealtime=yes
 PrivateDevices=yes
-CapabilityBoundingSet=
+
+# Capability Settings
+CapabilityBoundingSet=CAP_NET_BIND_SERVICE
+AmbientCapabilities=CAP_NET_BIND_SERVICE
 
 [Install]
 WantedBy=multi-user.target
